# local-code-review

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  build.rs  build.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.orig  vitest.workspace.ts
frontend/src/: App.browser.test.tsx  App.css  App.fontsize.browser.test.tsx  App.theme.browser.test.tsx  App.tsx  themes.ts
frontend/src/__tests__/: themes.test.ts
frontend/src/components/: CommentForm.tsx  CommentWidget.tsx  DiffView.tsx  FileDiff.tsx  OverallComments.tsx  Sidebar.icons.browser.test.tsx  Sidebar.tsx  SummaryPage.browser.test.tsx  SummaryPage.tsx
frontend/src/components/__tests__/: CommentForm.test.tsx  CommentWidget.test.tsx  DiffView.test.tsx  FileDiff.test.tsx  OverallComments.test.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts  useQuotaMonitor.ts  useReviewStore.tsx  useSession.ts
frontend/src/shared/: types.ts
frontend/src/test/: mock-api.ts  setup-unit.ts
frontend/src/utils/: build-file-tree.ts  client-markdown.ts  file-icon.tsx  transform-diff.ts
scripts/: coverage.sh
src/: main.rs  types.rs
src/cli/: mod.rs
src/config/: mod.rs
src/git/: diff_parser.rs  mod.rs  resolve_range.rs
src/output/: file_writer.rs  markdown.rs
src/server/: frontend.rs  mod.rs  shutdown.rs
src/server/middleware/: csrf.rs  mod.rs  path_guard.rs
src/server/routes/: mod.rs
src/session/: mod.rs
src/tui/: app.rs  icons.rs  keybindings.rs  mod.rs  syntax.rs  theme.rs
src/tui/components/: comment_form.rs  diff_view.rs  mod.rs  sidebar.rs
(+10 files in other folders)
