[package]
name = "local-review"
version = "0.1.0"
edition = "2021"
description = "Local code review tool with AI-agent-friendly markdown export"
license = "MIT"

[[bin]]
name = "local-review"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
regex = "1"
hex = "0.4"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
ratatui = "0.29"
crossterm = "0.28"
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
